refactor String.format(..)